--- a/src/App.css
+++ b/src/App.css
@@ -40,16 +40,19 @@ textarea:focus {
   padding: 0;
 }
 .Announcement {
-  background-color: #e54bc6; /* #1cb803 */
+  background-color: #ffffff; /* #1cb803 */
   padding: 10px 0px 6px 0px;
+  margin-bottom: 5px;
+  border: #000000;
+  box-shadow: #000000;
 }
 .Announcement .col-md-6 p {
-  color: white;
+  color: black;
   margin-right: 6rem;
   font-size: 15px;
 }
 .Announcement .col-12 a {
-  color: white;
+  color: black;
   margin-right: 2rem;
   font-size: 15px;
 }
@@ -58,7 +61,12 @@ textarea:focus {
   padding: 10px 0px 10px 0px;
 }
 .navbar-brand img {
-  width: 60%;
+  width: 30%;
+  height: 30%;
+}
+
+.navbar-color {
+  background-color: #000000;
 }
 .input-group {
   height: 50px;
@@ -211,6 +219,8 @@ textarea:focus {
 .carousel-item .img {
   width: 100%;
   height: 100%;
+  margin-bottom: 5px;
+  box-shadow: 0px 2px 5px rgba(18, 18, 18, 0.2);
 }
 
 /* .banner-details {
@@ -529,6 +539,11 @@ textarea:focus {
 .form label {
   padding: 10px 0;
   color: #8a8a8a;
+  text-transform: uppercase;
+  font-size: 13px;
+}
+.form label .form-input-label {
+  color: #000000;
   text-transform: uppercase;
   font-size: 13px;
 }
